Change project and package name

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
-Package: hashmap
-Title: What the Package Does (One Line, Title Case)
+Package: r2r
+Title: R-Object to R-Object Hash Maps
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Valerio",
+           family = "Gherardi",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "vgherard@sissa.it",
+           comment = c(ORCID = ""0000-0002-8215-3013""))
+Description: Hash table implementation with arbitrary R objects as keys.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
