--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: digest
+URL: https://github.com/vgherard/r2r
+BugReports: https://github.com/vgherard/r2r/issues
