Customisable hash functions and comparison ops

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(query,map)
 S3method(query,set)
 S3method(values,map)
 export("%has_key%")
+export(default_hash)
 export(delete)
 export(has_key)
 export(insert)
