--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Imports: digest
+Imports: digest, rlang
 URL: https://github.com/vgherard/r2r
 BugReports: https://github.com/vgherard/r2r/issues
