--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,13 +24,20 @@ S3method(query,r2r_hashmap)
 S3method(query,r2r_hashset)
 S3method(values,r2r_hashmap)
 export("%has_key%")
+export("compare_fn<-")
+export("default<-")
+export("hash_fn<-")
+export(compare_fn)
+export(default)
 export(default_hash_fn)
 export(delete)
 export(has_key)
+export(hash_fn)
 export(hashmap)
 export(hashset)
 export(insert)
 export(keys)
+export(on_missing_key)
 export(query)
 export(values)
 importFrom(digest,digest)
