Add various docu pages, update README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,25 +8,32 @@ S3method("[[",r2r_hashmap)
 S3method("[[",r2r_hashset)
 S3method("[[<-",r2r_hashmap)
 S3method("[[<-",r2r_hashset)
+S3method("default<-",r2r_hashmap)
+S3method("on_missing_key<-",r2r_hashmap)
+S3method(compare_fn,r2r_hashtable)
+S3method(default,r2r_hashmap)
 S3method(delete,r2r_hashmap)
 S3method(delete,r2r_hashset)
 S3method(has_key,r2r_hashmap)
 S3method(has_key,r2r_hashset)
+S3method(hash_fn,r2r_hashtable)
 S3method(insert,r2r_hashmap)
 S3method(insert,r2r_hashset)
-S3method(keys,r2r_hashmap)
-S3method(keys,r2r_hashset)
-S3method(length,r2r_hashmap)
-S3method(length,r2r_hashset)
+S3method(keys,r2r_hashtable)
+S3method(length,r2r_hashtable)
+S3method(on_missing_key,r2r_hashmap)
 S3method(print,r2r_hashmap)
 S3method(print,r2r_hashset)
 S3method(query,r2r_hashmap)
 S3method(query,r2r_hashset)
+S3method(str,r2r_hashmap)
+S3method(str,r2r_hashset)
+S3method(summary,r2r_hashmap)
+S3method(summary,r2r_hashset)
 S3method(values,r2r_hashmap)
 export("%has_key%")
-export("compare_fn<-")
 export("default<-")
-export("hash_fn<-")
+export("on_missing_key<-")
 export(compare_fn)
 export(default)
 export(default_hash_fn)
