--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,9 @@ Imports: digest, rlang
 URL: https://github.com/vgherard/r2r
 BugReports: https://github.com/vgherard/r2r/issues
 Suggests: 
+    knitr,
     covr,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    rmarkdown
 Config/testthat/edition: 3
+VignetteBuilder: knitr
